# auto-email-responder

./: README.md  pyproject.toml  read_email.py  sample.env
