[tool.poetry]
name = "auto-email-responder"
version = "0.1.0"
description = ""
authors = ["Cândido <candido101209@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-auth-oauthlib = "^1.0.0"
google-api-python-client = "^2.88.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
